# nanologger

./: .gitignore  Cargo.toml  README.md
examples/: colored_messages.rs  combined_logger.rs  demo.rs  disable_colors.rs  env_level.rs  kitchen_sink.rs  log_facade.rs  module_filter.rs  source_location.rs  test_logger.rs  thread_info.rs  write_logger.rs
src/: lib.rs
tests/: combined_logger_properties.rs  combined_logger_unit.rs  env_level_properties.rs  env_level_unit.rs  filtering_properties.rs  init_unit.rs  log_before_init.rs  log_facade.rs  log_facade_module_filter.rs  log_facade_source_location.rs  loglevel_properties.rs  macro_unit.rs  module_deny_unit.rs  module_filter_unit.rs  per_output_filtering_properties.rs  per_output_thread_info_properties.rs  source_location_disabled_unit.rs  source_location_unit.rs  test_logger_unit.rs  thread_info_unit.rs  timestamps_deny_unit.rs  write_logger_failing.rs  write_logger_properties.rs  write_logger_timestamps_unit.rs  write_logger_unit.rs
